5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4347/executions/1596_2894.log
== TEST (2019-03-26 18:26:56) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_do_jogo = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = ?????

# Impressao do valor total:
print(?????)
-- ERROR:
File "XXXX", line 8
    total = ?????
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:29:42) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_do_jogo = float(input("Qual o valor unitario do jogo? "))


valor_do_frete=45
valor_do_frete=float(input("valor do frete: "))

# Calculo do valor a ser pago, incluindo o frete:
total = valor_do_jogo * 8 + valor_do_frete

# Impressao do valor total:
print(?????)
-- ERROR:
File "XXXX", line 15
    print(?????)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:29:59) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_do_jogo = float(input("Qual o valor unitario do jogo? "))


valor_do_frete=45
valor_do_frete=float(input("valor do frete: "))

# Calculo do valor a ser pago, incluindo o frete:
total = valor_do_jogo * 8 + valor_do_frete

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.168419
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 9, in <module>
    valor_do_frete=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:30:26) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_do_jogo1= float(input("Qual o valor unitario do jogo? "))


valor_do_frete=45
valor_do_frete=float(input("valor do frete: "))

# Calculo do valor a ser pago, incluindo o frete:
total = valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.179636
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 9, in <module>
    valor_do_frete=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:30:41) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_do_jogo1= float(input("Qual o valor unitario do jogo? "))


valor_do_frete=45
valor_do_frete=float(input("valor do frete: "))

# Calculo do valor a ser pago, incluindo o frete:
total = valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print "total"
-- EXECUTION TIME:
0.121815
-- ERROR:
  File "/home/codebench/codes/1596/2894/main.py", line 15
    print "total"
                ^
SyntaxError: Missing parentheses in call to 'print'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:30:59) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_do_jogo1= float(input("Qual o valor unitario do jogo? "))


valor_do_frete=45
valor_do_frete=float(input("valor do frete: "))

# Calculo do valor a ser pago, incluindo o frete:
total=valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.183151
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 9, in <module>
    valor_do_frete=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:31:10) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_do_jogo1= float(input("Qual o valor unitario do jogo? "))


valor_do_frete=45
valor_do_frete=float(input("valor do frete: "))

# Calculo do valor a ser pago, incluindo o frete:
total=valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    valor_do_frete=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:31:22) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_do_jogo1= float(input("Qual o valor unitario do jogo?"))


valor_do_frete=45
valor_do_frete=float(input("valor do frete: "))

# Calculo do valor a ser pago, incluindo o frete:
total=valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.2051
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 9, in <module>
    valor_do_frete=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:31:25) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_do_jogo1= float(input("Qual o valor unitario do jogo?"))


valor_do_frete=45
valor_do_frete=float(input("valor do frete: "))

# Calculo do valor a ser pago, incluindo o frete:
total=valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    valor_do_frete=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:32:14) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_do_jogo1= float(input("Qual o valor unitario do jogo?"))


valor_do_frete=45
valor_do_frete=float(input("valor do frete: "))

# Calculo do valor a ser pago, incluindo o frete:
total=valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    valor_do_frete=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:32:35) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_do_jogo1= float(input("Qual o valor unitario do jogo?"))


valor_do_frete=45
valor_do_frete=float(input("valor do frete: "))

# Calculo do valor a ser pago, incluindo o frete:
total=valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.160509
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 9, in <module>
    valor_do_frete=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:32:37) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_do_jogo1= float(input("Qual o valor unitario do jogo?"))


valor_do_frete=45
valor_do_frete=float(input("valor do frete: "))

# Calculo do valor a ser pago, incluindo o frete:
total=valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.20538
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 9, in <module>
    valor_do_frete=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:32:38) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_do_jogo1= float(input("Qual o valor unitario do jogo?"))


valor_do_frete=45
valor_do_frete=float(input("valor do frete: "))

# Calculo do valor a ser pago, incluindo o frete:
total=valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    valor_do_frete=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:32:49) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_do_jogo1= float(input("Qual o valor unitario do jogo?"))


valor_do_frete=45
valor_do_frete=float(input("valor do frete: "))

# Calculo do valor a ser pago, incluindo o frete:
total=valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.141936
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 9, in <module>
    valor_do_frete=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:34:14) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_do_jogo1= float(input("Qual o valor unitario do jogo?"))


valor_do_frete=45
valor_do_frete=float(input("valor do frete: "))

# Calculo do valor a ser pago, incluindo o frete:
total=valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.232767
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 9, in <module>
    valor_do_frete=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:34:15) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_do_jogo1= float(input("Qual o valor unitario do jogo?"))


valor_do_frete=45
valor_do_frete=float(input("valor do frete: "))

# Calculo do valor a ser pago, incluindo o frete:
total=valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    valor_do_frete=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:35:07) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_do_jogo1= float(input("Qual o valor unitario do jogo?"))


valor_do_frete=45
valor_do_frete=float(input("valor do frete: "))

# Calculo do valor a ser pago, incluindo o frete:
total=valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.121103
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 9, in <module>
    valor_do_frete=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:35:09) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_do_jogo1= float(input("Qual o valor unitario do jogo?"))


valor_do_frete=45
valor_do_frete=float(input("valor do frete: "))

# Calculo do valor a ser pago, incluindo o frete:
total=valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    valor_do_frete=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:35:27) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_do_jogo1= float(input("Qual o valor unitario do jogo?"))


valor_do_frete=45
valor_do_frete=float(input("valor do frete: "))

# Calculo do valor a ser pago, incluindo o frete:
total=valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.160195
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 9, in <module>
    valor_do_frete=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:35:37) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_do_jogo1= float(input("Qual o valor unitario do jogo?"))


valor_do_frete=45
valor_do_frete=float(input("valor do frete: "))

# Calculo do valor a ser pago, incluindo o frete:
total=valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    valor_do_frete=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:35:56) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_do_jogo1= float(input("Qual o valor unitario do jogo?"))


valor_do_frete=45
valor_do_frete=float(input("valor do frete: "))

# Calculo do valor a ser pago, incluindo o frete:
total=valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.150857
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 9, in <module>
    valor_do_frete=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:41:09) 
-- CODE:

valor_do_jogo1= float(input("Qual o valor unitario do jogo?"))


valor_do_frete=45
valor_do_frete=float(input("valor do frete: "))


total=valor_do_jogo1 * 8 + valor_do_frete


print(total)
-- EXECUTION TIME:
0.172908
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 6, in <module>
    valor_do_frete=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:42:13) 
-- CODE:

valor_do_jogo1= float(input("Qual o valor unitario do jogo?"))


valor_do_frete=45
valor_do_frete=float(input("valor do frete: "))


total=valor_do_jogo1 * 8 + valor_do_frete


print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    valor_do_frete=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:42:27) 
-- CODE:

valor_do_jogo1= float("Qual o valor unitario do jogo?"))


valor_do_frete=45
valor_do_frete=float(input("valor do frete: "))


total=valor_do_jogo1 * 8 + valor_do_frete


print(total)
-- ERROR:
File "XXXX", line 2
    valor_do_jogo1= float("Qual o valor unitario do jogo?"))
                                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:42:44) 
-- CODE:

valor_do_jogo1= float(input("Qual o valor unitario do jogo?"))


valor_do_frete=45
valor_do_frete=float(input("valor do frete: "))


total=valor_do_jogo1 * 8 + valor_do_frete


print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    valor_do_frete=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:43:18) 
-- CODE:

valor_do_jogo1= float(input("Qual o valor unitario do jogo?"))


valor_do_frete=45
valor_do_frete=float(input("valor do frete: "))


total=valor_do_jogo1 * 8 + valor_do_frete


print(total)
-- EXECUTION TIME:
0.234886
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 6, in <module>
    valor_do_frete=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:43:21) 
-- CODE:

valor_do_jogo1= float(input("Qual o valor unitario do jogo?"))


valor_do_frete=45
valor_do_frete=float(input("valor do frete: "))


total=valor_do_jogo1 * 8 + valor_do_frete


print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    valor_do_frete=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:43:33) 
-- CODE:

valor_do_jogo1= float(input("Qual o valor unitario do jogo?"))


valor_do_frete=45
valor_do_frete=float(input("valor do frete: "))


total=valor_do_jogo1 * 8 + valor_do_frete


print(total)
-- EXECUTION TIME:
0.132991
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 6, in <module>
    valor_do_frete=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:43:43) 
-- CODE:

valor_do_jogo1= float(input("Qual o valor unitario do jogo?"))


valor_do_frete=45
valor_do_frete=float(input("valor do frete: "))


total=valor_do_jogo1 * 8 + valor_do_frete


print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    valor_do_frete=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:43:55) 
-- CODE:

valor_do_jogo1= float(input("Qual o valor unitario do jogo?"))


valor_do_frete=45
valor_do_frete=float(input("valor do frete: "))


total=valor_do_jogo1 * 8 + valor_do_frete


print(total)
-- EXECUTION TIME:
0.178453
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 6, in <module>
    valor_do_frete=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:44:00) 
-- CODE:

valor_do_jogo1= float(input("Qual o valor unitario do jogo?"))


valor_do_frete=45
valor_do_frete=float(input("valor do frete: "))


total=valor_do_jogo1 * 8 + valor_do_frete


print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    valor_do_frete=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:44:44) 
-- CODE:

valor_do_jogo1= float(input("Qual o valor unitario do jogo?"))


valor_do_frete=45
valor_do_frete=float(input("valor do frete: "))


total=valor_do_jogo1 * 8 + valor_do_frete


print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    valor_do_frete=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:45:16) 
-- CODE:

valor_do_jogo1= float(input("Qual o valor unitario do jogo?"))


valor_do_frete=45
valor_do_frete=float(input("valor do frete: "))


total=valor_do_jogo1 * 8 + valor_do_frete


print(total)
-- EXECUTION TIME:
0.299411
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 6, in <module>
    valor_do_frete=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:45:40) 
-- CODE:

valor_do_jogo1= float(input("Qual o valor unitario do jogo?"))


valor_do_frete=45
valor_do_frete=float(input("valor do frete: "))


total=valor_do_jogo1 * 8 + valor_do_frete


print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    valor_do_frete=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:46:39) 
-- CODE:

valor_do_jogo1= float(input("Qual_o_valor_unitario_do_jogo?"))


valor_do_frete=45
valor_do_frete=float(input("valor do frete: "))


total=valor_do_jogo1 * 8 + valor_do_frete


print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    valor_do_frete=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:46:42) 
-- CODE:

valor_do_jogo1= float(input("Qual_o_valor_unitario_do_jogo?"))


valor_do_frete=45
valor_do_frete=float(input("valor do frete: "))


total=valor_do_jogo1 * 8 + valor_do_frete


print(total)
-- EXECUTION TIME:
0.322528
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 6, in <module>
    valor_do_frete=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:47:15) 
-- CODE:

valor_do_jogo1= float(input("Qual_o_valor_unitario_do_jogo?"))


valor_do_frete=45
valor_do_frete=float(input("valor do frete: "))


total=valor_do_jogo1 * 8 + valor_do_frete


print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    valor_do_frete=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:47:25) 
-- CODE:

valor_do_jogo1= float(input("Qual_o_valor_unitario_do_jogo?"))


valor_do_frete=45
valor_do_frete=float(input("valor do frete: "))


total=valor_do_jogo1 * 8 + valor_do_frete


print(total)
-- EXECUTION TIME:
0.226519
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 6, in <module>
    valor_do_frete=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:48:16) 
-- CODE:

valor_do_jogo1= float(input("Qual_o_valor_unitario_do_jogo?"))


valor_do_frete=45
valor_do_frete=float(input("valor do frete: "))


total=valor_do_jogo1 * 8 + valor_do_frete


print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    valor_do_frete=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:49:41) 
-- CODE:

valor_do_jogo1= float(input("Qual_o_valor_unitario_do_jogo? "))


valor_do_frete=45
valor_do_frete=float(input("valor do frete: "))


total=valor_do_jogo1 * 8 + valor_do_frete


print(total)
-- EXECUTION TIME:
0.207287
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 6, in <module>
    valor_do_frete=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:50:06) 
-- CODE:

valor_do_jogo1= float(input("Qual_o_valor_unitario_do_jogo?  "))


valor_do_frete=45
valor_do_frete=float(input("valor do frete: "))


total=valor_do_jogo1 * 8 + valor_do_frete


print(total)
-- EXECUTION TIME:
0.204528
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 6, in <module>
    valor_do_frete=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:50:54) 
-- CODE:

valor_do_jogo1= float(input("Qual o valor unitario do jogo?  "))


valor_do_frete=45.0
valor_do_frete=float(input("valor do frete: "))


total=valor_do_jogo1 * 8 + valor_do_frete


print(total)
-- EXECUTION TIME:
0.126793
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 6, in <module>
    valor_do_frete=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:51:01) 
-- CODE:

valor_do_jogo1= float(input("Qual o valor unitario do jogo?  "))


valor_do_frete=45.0
valor_do_frete=float(input("valor do frete: "))


total=valor_do_jogo1 * 8 + valor_do_frete


print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    valor_do_frete=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:51:26) 
-- CODE:
valor_do_jogo1= float(input("Qual o valor unitario do jogo? "))


valor_do_frete=45.0
valor_do_frete=float(input("valor do frete: "))


total=valor_do_jogo1 * 8 + valor_do_frete


print(total)
-- EXECUTION TIME:
0.225651
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 5, in <module>
    valor_do_frete=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:52:14) 
-- CODE:
valor_do_jogo1= float(input("Qual o valor unitario do jogo? "))


valor_do_frete= 45.0



total=valor_do_jogo1 * 8 + valor_do_frete


print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:52:17) 
-- CODE:
valor_do_jogo1= float(input("Qual o valor unitario do jogo? "))


valor_do_frete= 45.0



total=valor_do_jogo1 * 8 + valor_do_frete


print(total)
-- EXECUTION TIME:
0.158973
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
